--- a/gradus.ui
+++ b/gradus.ui
@@ -140,7 +140,7 @@
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>MS Shell Dlg 2</string>
+        <string>Arial Narrow</string>
        </property>
       </widget>
      </item>
@@ -167,7 +167,7 @@
         <number>72</number>
        </property>
        <property name="value">
-        <number>13</number>
+        <number>14</number>
        </property>
       </widget>
      </item>
